# jinhuazhilu

./: README.md
camera_simple/: settings.gradle
camera_simple/app/: CMakeLists.txt  build.gradle
camera_simple/app/src/androidTest/java/com/ke/zhu/camera_simple/: ExampleInstrumentedTest.java
camera_simple/app/src/main/: AndroidManifest.xml
camera_simple/app/src/main/cpp/: native-lib.cpp
camera_simple/app/src/main/java/com/ke/zhu/camera_simple/: CameraHelp.java  JniUtils.java  MainActivity.java
camera_simple/app/src/main/jni/: com_ke_zhu_camera_simple_JniUtils.cpp
camera_simple/app/src/main/jniLibs/include/: com_ke_zhu_camera_simple_JniUtils.h
camera_simple/app/src/main/res/layout/: activity_main.xml
camera_simple/app/src/main/res/values/: strings.xml
camera_simple/app/src/test/java/com/ke/zhu/camera_simple/: ExampleUnitTest.java
camera_simple/gradle/wrapper/: gradle-wrapper.properties
